objects/AIA_Package__c.object
<CustomObject>
    <fields>
        <fullName>Coverage_Levels__c</fullName>
        <label>Coverage Levels</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – 2 PARTY (DP2)</fullName>
                    <isActive>false</isActive>
                    <label>DOMESTIC PARTNER – 2 PARTY (DP2)</label>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – 2 PARTY AND FAMILY (DP2F)</fullName>
                    <isActive>false</isActive>
                    <label>DOMESTIC PARTNER – 2 PARTY AND FAMILY (DP2F)</label>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – FAMILY (DPF)</fullName>
                    <isActive>false</isActive>
                    <label>DOMESTIC PARTNER – FAMILY (DPF)</label>
                </value>
                <value>
                    <fullName>FAMILY (FAM)</fullName>
                    <isActive>false</isActive>
                    <label>FAMILY (FAM)</label>
                </value>
                <value>
                    <fullName>INDIVIDUAL (IND)</fullName>
                    <isActive>false</isActive>
                    <label>INDIVIDUAL (IND)</label>
                </value>
                <value>
                    <fullName>PARENT/CHILD (P/C)</fullName>
                    <isActive>false</isActive>
                    <label>PARENT/CHILD (P/C)</label>
                </value>
                <value>
                    <fullName>PARENT/CHILDREN (PCN)</fullName>
                    <isActive>false</isActive>
                    <label>PARENT/CHILDREN (PCN)</label>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED – 2 PARTY (SG2)</fullName>
                    <isActive>false</isActive>
                    <label>SAME GENDER MARRIED – 2 PARTY (SG2)</label>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED – 2 PARTY AND FAMILY (SG2F)</fullName>
                    <isActive>false</isActive>
                    <label>SAME GENDER MARRIED – 2 PARTY AND FAMILY (SG2F)</label>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED – FAMILY (SGF)</fullName>
                    <isActive>false</isActive>
                    <label>SAME GENDER MARRIED – FAMILY (SGF)</label>
                </value>
                <value>
                    <fullName>SUBSCRIBER/SPOUSE (S/S)</fullName>
                    <isActive>false</isActive>
                    <label>SUBSCRIBER/SPOUSE (S/S)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Value_Drawloop__c</fullName>
        <formula>IF( Drug__c = true, 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Value Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_new_Date__c</fullName>
        <description>Effective date on package  = Effective date on BRF (if request type = new/prospect)
Effective date on package  =*manual* (if request type = other than new/prospect)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Group_Structure_Request_Form__c</field>
                <operation>equals</operation>
                <valueField>AIA_Group_Structure_Form_Product__c.Group_Structure_Request_Form__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Group_Structure_Form_Product__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limited_Coverage__c</fullName>
        <label>Limited Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Coverage_Levels__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INDIVIDUAL (IND)</fullName>
                </value>
                <value>
                    <fullName>SUBSCRIBER/SPOUSE (S/S)</fullName>
                </value>
                <value>
                    <fullName>PARENT/CHILD (P/C)</fullName>
                </value>
                <value>
                    <fullName>FAMILY (FAM)</fullName>
                </value>
                <value>
                    <fullName>PARENT/CHILDREN (PCN)</fullName>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED – 2 PARTY (SG2)</fullName>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED – 2 PARTY AND FAMILY (SG2F)</fullName>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED – FAMILY (SGF)</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – 2 PARTY (DP2)</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – 2 PARTY AND FAMILY (DP2F)</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – FAMILY (DPF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Benefit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Benefit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Code_Notes_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Code Notes Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package_Code_Notes_Picklist__c</fullName>
        <label>Package Code Notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ACTIVE ESRD MEDICARE PRIMARY</fullName>
                </value>
                <value>
                    <fullName>COBRA MEDICARE PRIMARY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Group_Structure_Request_Form_Product__r.Proposed_Products__r.Plan_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Coverage__c</fullName>
        <formula>IF( ISPICKVAL( Coverage_Levels__c, 'Standard') ,
'- INDIVIDUAL (IND)'+ BR() +
'- SUBSCRIBER/SPOUSE (S/S)'+ BR() +
'- PARENT/CHILD (P/C)'+ BR() +
'- FAMILY (FAM)'+ BR() +
'- PARENT/CHILDREN (PCN)'+ BR() +
'- SAME GENDER MARRIED – 2 PARTY (SG2)'+ BR() +
'- SAME GENDER MARRIED – 2 PARTY AND FAMILY (SG2F)'+ BR() + 
'- SAME GENDER MARRIED – FAMILY (SGF)'+ BR() +
'- DOMESTIC PARTNER – 2 PARTY (DP2)'+ BR() +
'- DOMESTIC PARTNER – 2 PARTY AND FAMILY (DP2F)'+ BR() +
'- DOMESTIC PARTNER – FAMILY (DPF)'+ BR(),null)</formula>
        <label>Standard Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERM_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SELECT (not Davis)</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>SELECT/BLUE PLUS</fullName>
                </value>
                <value>
                    <fullName>SELECT/CORE</fullName>
                </value>
                <value>
                    <fullName>SELECT/VOLUNTARY</fullName>
                </value>
                <value>
                    <fullName>BLUEVISION (CORE)</fullName>
                </value>
                <value>
                    <fullName>BLUEVISION PLUS</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY BLUE VISION PLUS</fullName>
                </value>
                <value>
                    <fullName>BLUEVISION PLUS (MEDIGAP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Package</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>P001_Package_Code_Notes_Other</fullName>
        <active>true</active>
        <description>If  Package Code Notes value is "Other" then Package Code Notes Other is mandatory</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF( 
AND( 
(TEXT(Package_Code_Notes_Picklist__c ) = "Other"), 
LEN( Package_Code_Notes_Other__c ) = 0), True, False)</errorConditionFormula>
        <errorDisplayField>Package_Code_Notes_Other__c</errorDisplayField>
        <errorMessage>Please enter Package Code Notes Other value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P002_Vision_other_field</fullName>
        <active>false</active>
        <description>Vision Product lookup is blank, then Vision other field is mandatory</description>
        <errorConditionFormula>DATEVALUE(CreatedDate) =  TODAY() 
/** Commented this and added a dummy condition above
Not($Permission.Ignore_Validation_Rules) &amp;&amp; if(AND( Group_Structure_Request_Form_Product__c = null, Vision_Other__c = null),true,false)
**/</errorConditionFormula>
        <errorDisplayField>Group_Structure_Request_Form_Product__c</errorDisplayField>
        <errorMessage>If VIsion Product lookup is blank, then Vision other field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P003_Termination_Date</fullName>
        <active>true</active>
        <description>When Request Type of related GSRF is "Prospect/New", the Termination Date must be blank.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND( ISPICKVAL(Group_Structure_Request_Form__r.Implementation__r.Benefit_Request_Form__r.Request_Type__c, 'Prospect/New') , NOT( ISBLANK( TERM_Date__c) ) )</errorConditionFormula>
        <errorDisplayField>TERM_Date__c</errorDisplayField>
        <errorMessage>Termination date not valid for Request Type Prospect/New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P004_LimitedCoverage</fullName>
        <active>true</active>
        <description>if coverage is limited,limited coverage is mandatory</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND( ISPICKVAL( Coverage_Levels__c , 'Limited'), ISBLANK( Limited_Coverage__c ) )</errorConditionFormula>
        <errorDisplayField>Limited_Coverage__c</errorDisplayField>
        <errorMessage>if Coverage Level is limited, Limited Coverage is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P005_Effective_Date</fullName>
        <active>true</active>
        <description>Effective date should not be grater than termination date</description>
        <errorConditionFormula>(Effective_new_Date__c &gt; TERM_Date__c) ||(ISNULL(Effective_new_Date__c) &amp;&amp; NOT(ISNULL(TERM_Date__c) ))</errorConditionFormula>
        <errorDisplayField>Effective_new_Date__c</errorDisplayField>
        <errorMessage>Please provide Effective date or should not be grater than Termination date</errorMessage>
    </validationRules>
</CustomObject>